--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
-    "nodemon": "^2.0.6",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.6"
   },
   "scripts": {
     "dev": "nodemon servidorAlunoApp.js",
